# ORA-BOLAS

./: README.md  dados_trajetoria_bola.txt  dados_trajetoria_robo.txt  main.py  pyproject.toml
dados/: dados_trajetoria_robo.txt
