[tool.poetry]
name = "repl-nix-ora-bolas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ora_bolas"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
